--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "format": "prettier -w day*/*.ts"
   },
   "dependencies": {
+    "@tsconfig/deno": "^1.0.5",
     "@types/jest": "^26.0.15",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
